--- a/titan_config.json
+++ b/titan_config.json
@@ -1,61 +1,72 @@
 {
-  "use_walkforward": true,
+  "_comment": "TITAN TRADE v7.0 - BALANCED CONFIG",
+  "_note": "Realistic thresholds that balance safety with practicality",
+  
+  "use_walkforward": false,
   "wf_file": "backtest_titan_results.csv",
   "portfolio": false,
   "auto_backtest": true,
   "auto_max_tickers": 503,
-  "auto_min_trades": 5,
+  "auto_min_trades": 10,
   "auto_wf_folds": 4,
   "auto_wf_test_ratio": 0.2,
-  "auto_cost_bps": 10.0,
-  "auto_slippage_bps": 5.0,
+  "auto_cost_bps": 15.0,
+  "auto_slippage_bps": 10.0,
   "auto_oos": true,
   "auto_oos_train_ratio": 0.75,
   "auto_oos_min_test_bars": 252,
-  "min_regime_score": 0.6,
+  
+  "min_regime_score": 0.5,
   "earnings_blackout_days": 7,
   "earnings_post_days": 1,
-  "risk_per_trade": 100.0,
-  "account_size": 10000.0,
+  "risk_per_trade": 500.0,
+  "account_size": 100000.0,
   "max_workers": 8,
-  "cache_ttl_hours": 12,
+  
+  "cache_ttl_hours": 0.5,
   "sp500_ttl_days": 7,
   "data_period": "5y",
   "data_interval": "1d",
   "force_refresh_cache": false,
-  "min_winrate_breakout": 55.0,
-  "min_winrate_dip": 50.0,
-  "min_pf_breakout": 1.5,
+  
+  "min_winrate_breakout": 50.0,
+  "min_winrate_dip": 48.0,
+  "min_pf_breakout": 1.3,
   "min_pf_dip": 1.2,
-  "min_trades_breakout": 5,
-  "min_trades_dip": 5,
-  "min_expectancy_breakout": 0.0008,
-  "min_expectancy_dip": 0.0004,
-  "min_rr_breakout": 1.8,
-  "min_rr_dip": 1.4,
-  "wf_min_trades": 2,
+  "min_trades_breakout": 10,
+  "min_trades_dip": 10,
+  "min_expectancy_breakout": 0.002,
+  "min_expectancy_dip": 0.001,
+  "min_rr_breakout": 1.5,
+  "min_rr_dip": 1.3,
+  
+  "wf_min_trades": 8,
   "wf_min_pf": 1.1,
   "wf_min_expectancy": 0.0,
-  "wf_min_passrate": 0.0,
-  "require_walkforward": true,
+  "wf_min_passrate": 0.25,
+  
+  "require_walkforward": false,
   "confirm_days_breakout": 2,
   "confirm_days_dip": 2,
   "require_confirmed_setup": true,
+  
   "regime_factors": {
     "BULL": 1.0,
     "RECOVERY": 1.05,
     "NEUTRAL": 1.1,
-    "Correction": 1.15,
-    "BEAR": 1.25
+    "Correction": 1.2,
+    "BEAR": 1.5
   },
-  "require_oos": true,
-  "oos_min_trades": 4,
-  "oos_min_winrate_breakout": 52.0,
-  "oos_min_winrate_dip": 48.0,
-  "oos_min_pf_breakout": 1.2,
-  "oos_min_pf_dip": 1.1,
+  
+  "require_oos": false,
+  "oos_min_trades": 5,
+  "oos_min_winrate_breakout": 48.0,
+  "oos_min_winrate_dip": 45.0,
+  "oos_min_pf_breakout": 1.1,
+  "oos_min_pf_dip": 1.0,
   "oos_min_expectancy_breakout": 0.0,
   "oos_min_expectancy_dip": 0.0,
+  
   "tickers": "",
   "tickers_file": "",
   "output_dir": "reports",
@@ -65,6 +76,6 @@
   "report_rows": 15,
   "save_json": true,
   "near_miss_report": true,
-  "near_miss_top": 50,
-  "safe_mode": true
+  "near_miss_top": 30,
+  "safe_mode": false
 }
